[package]
name = "spawny"
version = "1.0.0"
edition = "2021"

description = "A tool to spawn and manage multiple programs in parallel."
authors = ["Michael Schulte"]
license = "MIT"
repository = "https://github.com/michael72/spawny"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
libc = "0.2"
